# EasyEatsOnline

./: .coveragerc  .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  main.py  manage.py  postmanCollection.json  pyproject.toml  requirements copy.txt  requirements.txt
.github/workflows/: ci.yml
admin/: __init__.py  cart.py  cartAdmin.py  category.py  categoryAdmin.py  login_admin.py  order.py  orderAdmin.py  product.py  productAdmin.py  register.py  user.py  userAdmin.py
admin/auth/: login.py
client/: angular.json  package-lock.json  package.json  tsconfig.json
client/src/: index.html
config/: app.py  settings.py
controller/: __init__.py  auth_controller.py  user_controller.py
controllers/: __init__.py  adminAuthController.py  authController.py  authCotroller.py  auth_controller.py  cartController.py  cart_routes.py  categoryController.py  category_controller.py  category_routes.py  homeController.py  orderController.py  order_routes.py  productController.py  product_controller.py  product_routes.py  userController.py  user_controller.py  user_routes.py
dto/: __init__.py
interface/: product.py
middleware/: auth.py  permissions.py
migrations/versions/: 0dd13a18e639_.py  1129665f29b9_.py  (+17 more)
models/: __init__.py  cart.py  category.py  order.py  product.py  types.py  user.py
repositories/: baseRepository.py  cartRepository.py  categoryRepository.py  orderRepository.py  productRepository.py  userRepository.py
repository/: baseRepository.py  cartRepository.py  categoryRepository.py  orderRepository.py  productRepository.py  userRepository.py
requirements/: all.txt  dev.txt  prod.txt
routes/: __init__.py  auth_controller.py  auth_routes.py  cart_routes.py  category_controller.py  category_routes.py  order_routes.py  product_controller.py  product_routes.py  user_routes.py
schemas/: authSchema.py  cartSchema.py  categorySchema.py  dto.py  orderSchema.py  productSchema.py  userSchema.py
services/: authService.py  auth_service.py  cartService.py  cart_service.py  categoryService.py  category_service.py  emailService.py  orderService.py  order_service.py  productService.py  product_service.py  tokenService.py  userService.py  user_service.py
templates/: base.html
test/: test_config.py
tests/: fixture.py  test_settings.py
types/: userTypes.py
urls/: __init__.py  api.py  web.py
utils/: cli.py  commandCLI.py  mail.py  token.py  types.py  validators.py
validators/: authValidator.py  orderValidator.py  productValidator.py
(+69 files in other folders)
